@@ -13,6 +13,8 @@ Since build 216:
   raised) and unsigned integers now allow for values with the high-bit set to 
   be passed correctly.
 
+* Fix win32com.client.WithEvents() on py3k.
+
 * makepy may have generated syntax errors if 'helpstring' elements in typelibs
   had strange quoting or slashes (bug 3199631)
 
